--- a/styles/base.css
+++ b/styles/base.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  /* width: 120rem; */
+  width: 120rem;
   height: 67.5rem;
   margin: 0;
 }
@@ -50,6 +50,7 @@ main {
   background-color: rgba(112, 37, 251, 1);
   margin: 0;
   padding: 1.5rem 2.5rem;
+  height: 5rem;
 }
 
 .header-logo h1 {
