styled tab form title

--- a/styles/base.css
+++ b/styles/base.css
@@ -72,7 +72,7 @@ main {
   background-color: rgba(253, 83, 52, 1);
 }
 
-#main-side div {
+#landing-text {
   width: 100%;
   height: 100%;
   padding: 10rem 0 0 5rem;
