--- a/styles/personal-info.css
+++ b/styles/personal-info.css
@@ -27,7 +27,7 @@
   align-items: center;
   list-style-type: none;
   padding: 0;
-  margin-top: 5rem;
+  margin-top: 3rem;
   width: 20rem;
 }
 
@@ -44,7 +44,7 @@
 }
 
 
-#tabs-list .tab-index {
+.tab-index  p {
   box-sizing: border-box;
 
   width: 40px;
@@ -60,4 +60,21 @@
 
 .tab-index h5 {
     text-align: center;
+}
+
+/* styling form titles */
+.form-title{
+    padding: 0;
+    margin-top: 6rem;
+}
+
+.form-title h4 {
+    font-size: 2rem;   
+    margin-bottom: var(--space-1); 
+}
+
+.form-title p {
+    color: rgba(149, 147, 154, 1);
+    margin: 0;
+    margin-bottom: 3rem;
 }
