--- a/styles/personal-info.css
+++ b/styles/personal-info.css
@@ -10,6 +10,35 @@
   padding-left: 3rem;
 }
 
+/* styling quote */
+#quote{
+    position: absolute;
+    top: 15rem;
+    left: 9rem;
+    width: 27rem;
+}
+
+#quote h2 {
+  font-style: italic;
+  font-weight: 800;
+  font-size: 26px;
+  line-height: 35px;
+  text-transform: uppercase;
+  color: #212529;
+}
+
+#quote p {
+font-style: italic;
+font-weight: 500;
+font-size: 24px;
+line-height: 33px;
+/* identical to box height */
+
+text-transform: uppercase;
+
+color: #ffffff;
+}
+
 /* styling tab title*/
 
 #title-container hr {
@@ -92,8 +121,8 @@
 }
 
 #form-controll {
-    margin-top: 5rem;
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
+  margin-top: 5rem;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
 }
