changed button to link temporarely to move between pages more easy

--- a/styles/personal-info.css
+++ b/styles/personal-info.css
@@ -152,9 +152,9 @@
 }
 
 /* will be changed later with js */
-.input-field-success {
+/* .input-field-success {
   
-}
+} */
 /* ///////////////////// */
 
 .input-field-error {
